fix: fix linking from landing page to the main page

--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@
     <div class='sreenshot'><img class='screen-img' src="assets/ba84193ae6d09dbb504bd8d3a90239c8.jpg" alt=""></div>
     <div class='animation'><img class='animation-img' src="assets/a277a2088c2978312396bf66e821f819.gif" alt=""></div>
   </div>
-<script type="text/javascript" src="app.bundle.js"></script></body>
+<script type="text/javascript" src="home.bundle.js"></script><script type="text/javascript" src="view.bundle.js"></script></body>
 </html>
