feat: add new build of the project

--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
   <title>Landing page of Piskel clone</title>
 </head>
 <body>
-  <div class="landing-wrapper">
-    <div class='information'><h1>Piskel clone</h1>
-      <form id = 'form-signin'>
-          <div class="container">
-            <label for="email"><b>Email</b></label>
-            <input id='email' type="email" placeholder="Enter email" name="email" required>
-            <span class = 'ask-email'>input your email</span>
-            <input id = 'button-signin' type="button" value="Sign in">
-          </div>
-        </form>
-    </div>
-    <div class='sreenshot'><img class='screen-img' src="assets/ba84193ae6d09dbb504bd8d3a90239c8.jpg" alt=""></div>
-    <div class='animation'><img class='animation-img' src="assets/a277a2088c2978312396bf66e821f819.gif" alt=""></div>
+  <header>Piskel clone</header>
+  <div class="main">
+      <div class='description'>Free online-editor for creating simple piksel animation.</br>
+        <ul> Instruments includes:
+          <li>Bucket</li>
+          <li>Color picker</li>
+          <li>Stroke</li>
+          <li>Rectangle</li>
+          <li>Pen</li>
+          <li>Eraser</li>
+        </ul>
+        <input id = 'button-signin' type="button" value="CREATE SPRITE" class='button-signin'>
+      </div>
+      <div class='screen'><img src='assets/d1c14e3c27ae05fff40f8bd65305280e.jpg' alt=""></div>
   </div>
-<script type="text/javascript" src="home.bundle.js"></script><script type="text/javascript" src="view.bundle.js"></script></body>
+  <footer>Alena Chyrskaya <a href="https://github.com/helendub" target="_blank">GitHub</a></footer>
+<script type="text/javascript" src="home.bundle.js"></script><script type="text/javascript" src="view.bundle.js"></script><script type="text/javascript" src="view-init.bundle.js"></script><script type="text/javascript" src="tools.bundle.js"></script></body>
 </html>
