--- a/view.html
+++ b/view.html
@@ -4,34 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="./view.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <title>Document</title>
-
 </head>
 <body>
-
-    <div class="wrapper" id='wrapper'>
-        <div class='left-panel' id='left-panel'>
-            <div class="instrument bucket" id='bucket'>
+    <header>Piskel clone</header>
+    <div class="wrapper">
+        <div class='left-panel'>
+          <div class='tools' id='tools'>
+            <div class="tool bucket" id='bucket'>
                 <img id='img-bucket' src="assets/ea1f8eb144c225e21de3d16cb6f9c725.png" alt="">
             </div>
-            <div class="instrument dropper">
+            <div class="tool dropper">
                 <img src="assets/a0ba653686984712732c14e4d90a686e.png" alt="">
             </div>
-            <div class="instrument line">
+            <div class="tool line">
                 <img id='img-line' src="assets/4a6b0911f25f8ca530c084d709c77e30.png" alt="">
             </div>
-            <div class="instrument rectangle" id='rectangle'>
+            <div class="tool rectangle" id='rectangle'>
                 <img src="assets/f2a525e3bd3b85f2022f05dca1f55351.png" alt="">
             </div>
-            <div class="instrument pen" id='pen'>
+            <div class="tool pen" id='pen'>
                <img id='img-pen' src="assets/3d21a55fcb55eeea25ef9537cd473453.png" alt="">
             </div>
-            <div class="instrument eraser" id='eraser'>
+            <div class="tool eraser" id='eraser'>
                 <img src="assets/d19fcdcff26fa3b8684463d274933ef0.png" alt="">
              </div>
+          </div>
+           <div class='colors' id='colors'>
+             <label for="first-color">
+                <input type="color" id='first-color' class='first-color color' value="#0000ff">
+             </label>
+             <div class='swap-color' id='swap-color'></div>
+             <label for="second-color">
+                <input type="color" id='second-color' class='second-color color'>
+             </label>
+           </div>
             <div class='shortcuts'>Ctr+B - bucket<br> Ctr+C - color picker <br> Ctr+L - line <br> Ctr+V - rectangle <br> Ctr+P - pen <br> Ctr+E - eraser <br> Ctr+S - canvas size <br> Ctr+R - animation speed <br> Ctr+G - export GIF <br> Shift+A - add frame <br> Shift+C - copy frame <br> Shift+D - delete frame</div>
         </div>
         <div class='frame-wrapper'>
@@ -39,23 +46,18 @@
 
             </div>
             <div class='add-frame'><img src="assets/3a82aa972a5cf93d28573987d465fb4b.png" alt=""><div>frame</div></div>
-
         </div>
         <div class='canvas'>
           <canvas class='empty-canvas' id='empty-canvas'></canvas>
           <div class='squares-background' id='squares-background'></div>
         </div>
 
-
-
         <div class='player'>
+                <div class='canvas-player-wrapper' id='canvas-player-wrapper'>
                 <canvas id="canvas-player" class='canvas-player'></canvas>
-               speed: 1<input id='range' type="range" min="1" max="24" step="1" value="5">24 sec
-               <div class='colors' id='colors'>
-                  <div class='current-color'>Color <div class='current-color-circle' id='current-color-circle'></div></div>
-                  <div class='previous-color'><div class='previous-color-circle' id='previous-color-circle'></div></div>
-                  <div class='predifined-colors'><div class='predifined-color1'></div><div class='predifined-color2'></div><div class='predifined-color3'></div><div class='predifined-color4'></div><div class='predifined-color5'></div></div>
                 </div>
+               speed: 1<input id='range' type="range" min="1" max="24" step="1" value="5">24 sec
+               <input type="button" value="Full screen" id='button-fullscreen' class='button-fullscreen'>
                <div class='canvas-resize' id='canvas-resize'>Canvas size:
                   <select id = 'canvas-size' class='canvas-size'>
                       <option  name="canvas-size" value="32">32x32px</option>
@@ -63,8 +65,9 @@
                       <option  name="canvas-size" value="128">128x128px</option>
                     </select>
                </div>
-               <div class='save-img' id='save-img'>Export to GIF</div>
+               <input type="button" class='save-img' id='save-img'  value="Export to GIF" >
+               <div><span id='coordinates' class='coordinates'> </br></span></div>
         </div>
     </div>
-<script type="text/javascript" src="home.bundle.js"></script><script type="text/javascript" src="view.bundle.js"></script></body>
+<script type="text/javascript" src="home.bundle.js"></script><script type="text/javascript" src="view.bundle.js"></script><script type="text/javascript" src="view-init.bundle.js"></script><script type="text/javascript" src="tools.bundle.js"></script></body>
 </html>
