fix: fix working with export

--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@
       <div class='screen'><img src='assets/d1c14e3c27ae05fff40f8bd65305280e.jpg' alt=""></div>
   </div>
   <footer>Alena Chyrskaya <a href="https://github.com/helendub" target="_blank">GitHub</a></footer>
-<script type="text/javascript" src="home.bundle.js"></script><script type="text/javascript" src="view.bundle.js"></script><script type="text/javascript" src="view-init.bundle.js"></script><script type="text/javascript" src="tools.bundle.js"></script></body>
+<script type="text/javascript" src="home.bundle.js"></script><script type="text/javascript" src="view.bundle.js"></script><script type="text/javascript" src="view-init.bundle.js"></script><script type="text/javascript" src="tools.bundle.js"></script><script type="text/javascript" src="landing.bundle.js"></script><script type="text/javascript" src="export.bundle.js"></script><script type="text/javascript" src="export-worker.bundle.js"></script></body>
 </html>
