--- a/view.html
+++ b/view.html
@@ -69,5 +69,5 @@
                <div><span id='coordinates' class='coordinates'> </br></span></div>
         </div>
     </div>
-<script type="text/javascript" src="home.bundle.js"></script><script type="text/javascript" src="view.bundle.js"></script><script type="text/javascript" src="view-init.bundle.js"></script><script type="text/javascript" src="tools.bundle.js"></script></body>
+<script type="text/javascript" src="home.bundle.js"></script><script type="text/javascript" src="view.bundle.js"></script><script type="text/javascript" src="view-init.bundle.js"></script><script type="text/javascript" src="tools.bundle.js"></script><script type="text/javascript" src="landing.bundle.js"></script><script type="text/javascript" src="export.bundle.js"></script><script type="text/javascript" src="export-worker.bundle.js"></script></body>
 </html>
